--- a/src/components/Layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/components/Layouts/DefaultLayout/DefaultLayout.module.scss
@@ -16,5 +16,5 @@
 
 .content {
     flex: 1;
-    // min-height: 1000px;
+    min-height: 1000px;
 }
