--- a/src/components/Popper/Popper.module.scss
+++ b/src/components/Popper/Popper.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    max-height: 500px;
+    max-height: 600px;
     padding-top: 8px;
     background-color: rgb(27, 27, 27);
     border: 1px solid rgb(57, 57, 57);
